--- a/_posts/2018-1-19-ngrok内网穿透.md
+++ b/_posts/2018-1-19-ngrok内网穿透.md
@@ -19,7 +19,7 @@ ngrok可以做TCP端口转发，对于Linux可以将其映射到22端口进行SS
 
 2.一个泛解析到服务器的域名
 
-如图泛解析：![TIM截图20180117164959](https://warrest.github.io/wArrest.github.io/assets/images/ngrok/TIM截图20180117164959.png)
+如图泛解析：![TIM截图20180117164959](/wArrest.github.io/assets/images/_post/ngrok/TIM截图20180117164959.png)
 
 #### 三、环境准备
 
