--- a/_posts/2018-1-19-ngrok内网穿透.md
+++ b/_posts/2018-1-19-ngrok内网穿透.md
@@ -292,7 +292,7 @@ tunnels:
 
 点击ngrok.bat文件
 
-![TIM截图20180117172859](\img\ngrok\TIM截图20180117172859.png)
+![TIM截图20180117172859](/wArrest.github.io/assets/images/ngrok\TIM截图20180117172859.png)
 
 换一台电脑 WIN+R  输入mstsc 回车
 
