--- a/_posts/2018-01-18-在线批改选择题.md
+++ b/_posts/2018-01-18-在线批改选择题.md
@@ -1,14 +1,12 @@
 ---
 layout: post
-title:  "关于我"
+title:  "在线选择题批改实现"
 date:   2018-2-21 21:33:18 +0800
-categories: Me
-tags: Me
+categories: Ajax+php
+tags:Ajax
 description:前几天，和好久不见的色鬼叙了叙旧，得知他正在做毕业设计，其中一个要实现的功能就是在线选择题批改，他说有点犯难，巧的是他正在学TP。正好我也学习了一个学期的TP，感觉这个功能还挺有趣的，就主动说帮忙写，其中碰到不少问题，不过最终还是解决了。
 ---
 
-<!-- more -->
-<The rest of contents | 余下全文>
 
 ### 功能简述：一个账户登录，随机从题库中抽取10道选择题，开始考试，提交，批改分数。
 
