--- a/_posts/2018-1-26-搭建自己的PHP框架.md
+++ b/_posts/2018-1-26-搭建自己的PHP框架.md
@@ -1,14 +1,11 @@
-title: 搭建自己的PHP框架，第一天
-date: 2018-1-26 16:07:18
-tags: 搭建框架
-categories: PHP
-
 ---
-** {{ title }}：** <Excerpt in index | 首页摘要>
-![u=228695038,594732975&fm=27&gp=0](/img/phpFrame/u=228695038,594732975&fm=27&gp=0.jpg)
-接触了一个学期的ThinkPHP基本的用法也已经熟悉了，虽然框架是现在主流的开发方式，可以很大程度上地提升开发效率，但是总觉得框架限制了自己的思维，总觉得自己变成了框架程序员，对PHP的理解不够深。没想过要用自己搭的框架开发项目，希望通过这个学习搭建一个框架，顺便补一补原生php的知识，有助于自己对主流框架有更深的理解，使用起来也能更加得心应手。
-<!-- more -->
-<The rest of contents | 余下全文>
+layout: post
+title:  "搭建自己的PHP框架，第一天"
+date:   2018-1-26 16:07:18 +0800
+categories: 框架
+tags: 搭建框架
+description: 接触了一个学期的ThinkPHP基本的用法也已经熟悉了，虽然框架是现在主流的开发方式，可以很大程度上地提升开发效率，但是总觉得框架限制了自己的思维，总觉得自己变成了框架程序员，对PHP的理解不够深。没想过要用自己搭的框架开发项目，希望通过这个学习搭建一个框架，顺便补一补原生php的知识，有助于自己对主流框架有更深的理解，使用起来也能更加得心应手。
+---
 
 ### 什么是PHP框架？
 
