--- a/_posts/2018-1-28-数据结构第一天.md
+++ b/_posts/2018-1-28-数据结构第一天.md
@@ -1,14 +1,11 @@
-title: 数据结构学习
-date: 2018-1-28 19:08:50
-tags: 数据结构
+---
+layout: post
+title:  "数据结构学习"
+date:   2018-1-28 19:08:50 +0800
 categories: 数据结构
-
-------
-
-** {{ title }}：** <Excerpt in index | 首页摘要>
-考虑了很久还是准备把数据结构从头到尾重新学一次。
-<!-- more -->
-<The rest of contents | 余下全文>
+tags: 数据结构
+description: 考虑了很久还是准备把数据结构从头到尾重新学一次。
+---
 
 第一天
 ----
