--- a/_posts/2018-01-18-在线批改选择题.md
+++ b/_posts/2018-01-18-在线批改选择题.md
@@ -5,7 +5,7 @@ date:   2018-2-21 21:33:18 +0800
 categories: Ajax+php
 tags: Ajax
 description: 前几天，和好久不见的色鬼叙了叙旧，得知他正在做毕业设计，其中一个要实现的功能就是在线选择题批改，他说有点犯难，巧的是他正在学TP。正好我也学习了一个学期的TP，感觉这个功能还挺有趣的，就主动说帮忙写，其中碰到不少问题，不过最终还是解决了。
-typora-root-url: ..\assets\images
+
 ---
 
 ### 功能简述：一个账户登录，随机从题库中抽取10道选择题，开始考试，提交，批改分数。
@@ -16,11 +16,11 @@ typora-root-url: ..\assets\images
 
 1.首先准备三张表：
 
-**question表**：![TIM截图20180118100240](\testdemo\TIM截图20180118100240.png)
+**question表**：![TIM截图20180118100240](/wArrest.github.io/assets/images\testdemo\TIM截图20180118100240.png)
 
-user表：![TIM截图20180118100316](\testdemo\TIM截图20180118100316.png)
+user表：![TIM截图20180118100316](/wArrest.github.io/assets/images\testdemo\TIM截图20180118100316.png)
 
-user-test表（存放对应用户，对应用户的十道题目，也就是保存用户的试卷表）![TIM截图20180118100339](\testdemo\TIM截图20180118100339.png)
+user-test表（存放对应用户，对应用户的十道题目，也就是保存用户的试卷表）![TIM截图20180118100339](/wArrest.github.io/assets/images/testdemo/TIM截图20180118100339.png)
 
 第一步，用户登录：
 
@@ -95,7 +95,7 @@ public function question(){
 
 如图：
 
-![TIM截图20180118102026](\img\testdemo\TIM截图20180118102026.png)
+![TIM截图20180118102026](/wArrest.github.io/assets/images/testdemo/TIM截图20180118102026.png)
 
 res字段现在是空的也就用户还没有完成题目
 
@@ -223,7 +223,7 @@ public function res(){
 
 点击提交就ok了，之后完善的话一个用户考完试就不能进入考试页面，需要给一个状态字段，就可以实现，这里就不详述了。
 
-![TIM截图20180118103439](\testdemo\TIM截图20180118103439.png)
+![TIM截图20180118103439](/wArrest.github.io/assets/images/testdemo/TIM截图20180118103439.png)
 
 在线的例子改天上传，阿里云的备案一直过不了，很烦。
 
