--- a/_posts/2018-01-18-在线批改选择题.md
+++ b/_posts/2018-01-18-在线批改选择题.md
@@ -4,7 +4,7 @@ title: 'AJAX+ThinkPHP实现选择题批改'
 subtitle: 'AJAX+ThinkPHP实现选择题修改
 date: 2018-01-19 22:35:37
 categories: 技术
-cover: 'http://on2171g4d.bkt.clouddn.com/jekyll-theme-h2o-postcover.jpg'
+cover: 'https://warrest.github.io/wArrest.github.io/assets/testdemo/1.png'
 tags: 'AJAX ThinkPHP jq
 ---
 
