--- a/_posts/2018-1-28-数据结构第一天.md
+++ b/_posts/2018-1-28-数据结构第一天.md
@@ -4,7 +4,7 @@ title: '数据结构学习 第一天'
 subtitle: '考虑了很久还是准备把数据结构从头到尾重新学一次。'
 date: 2018-2-23
 categories: 数据结构
-cover: 'https://warrest.github.io/wArrest.github.io/assets/img/数据结构/1338730837_2482.png'
+cover: 'https://warrest.github.io/wArrest.github.io/assets/img/data/1338730837_2482.png'
 tags: 数据结构 学习
 ---
 
