--- a/_posts/2018-2-23-不要将就.md
+++ b/_posts/2018-2-23-不要将就.md
@@ -3,9 +3,9 @@ layout: post
 title: '不要将就'
 subtitle: '不少同志应该用过向日葵、花生壳这两个软件，向日葵可以实现远程连接，就算自己的电脑不在身边，只要电脑连上网，就可以通过另一台电脑下载向日葵远程连接自己的电脑。而花生壳则是实现内网穿透，别人可以通过外网访问到自己电脑上的网站，用通俗的意思讲就是把自己的电脑变成了服务器。'
 date: 2018-2-23
-categories: 情感
+logs: 情感
 cover: 'https://warrest.github.io/wArrest.github.io/assets/img/ngrok/0e2442a7d933c8955603f458db1373f082020097.jpg'
-logs: 2018-2-23 记住这一天
+tags: 2018-2-23 记住这一天
 ---
 
 
