--- a/_posts/2018-2-23-不要将就.md
+++ b/_posts/2018-2-23-不要将就.md
@@ -1,308 +1,23 @@
 ---
 layout: post
-title: '不要将'
-subtitle: '不少同志应该用过向日葵、花生壳这两个软件，向日葵可以实现远程连接，就算自己的电脑不在身边，只要电脑连上网，就可以通过另一台电脑下载向日葵远程连接自己的电脑。而花生壳则是实现内网穿透，别人可以通过外网访问到自己电脑上的网站，用通俗的意思讲就是把自己的电脑变成了服务器。'
+title: '和你的这些年'
+subtitle: '两个人分手后复合的概率是82%，但复合后能一直走到最后的只有3%，那97%再分手的理由其实都跟第一次一样。——《恋爱的温度》 这段话是真理。'
 date: 2018-2-23
-logs: 情感
-cover: 'https://warrest.github.io/wArrest.github.io/assets/img/ngrok/0e2442a7d933c8955603f458db1373f082020097.jpg'
+categories: 情感
+cover: 'https://warrest.github.io/wArrest.github.io/assets/img/2018-2-23/IMG20170527180229.jpg'
 tags: 2018-2-23 记住这一天
+
+<iframe src="//music.163.com/outchain/player?type=2&amp;id=513791211&amp;auto=1&amp;height=66" frameborder="no" border="0" marginwidth="0" marginheight="0" width="330px" height="86px"> </iframe>
 ---
+	从来没想过会第二次接受这种冷暴力，电话不接不回，微信不回，其他的事却啥都不耽搁。上一次是国庆，回学校的收她就说了分手。这次几乎是一模一样的节奏，说实话，我几乎是崩溃的。就在昨天晚上我和自己是说，要是明天她再继续下去，那我就说分手了。谁曾想知道，反倒是她先说了，果然还是一样的套路，我不知道为什么有些人，喜不喜欢一个人可以考虑4年，不知道为什么有些人可以分手前顺便冷暴力。这样很美滋滋吗？
+	是的我很虚伪，真的把她拉到面前，一顿臭骂的狗血淋头，却还是说
+	![TIM截图20180117164959](https://warrest.github.io/wArrest.github.io/assets/img/2018-2-23/7.png)
+	我他么能怎么办，再臭骂，再生气，走掉的人还会回来吗?为什么老是控制不住自己失望？还不是因为每次都傻逼一样的高估自己在别人心里的地位？
+	本来还想把这些年的事，图文并茂地记录下来，一动键盘发现真的什么也不想说，关于那些好的坏的，什么也不想想，让人恶心，尽是虚伪。
+	从她劈腿之后，我其实就是原谅不了，我一直都释怀不了，就算在后来两个人和好的好像什么事也没发生一样。因为很不甘心，很不甘心自己这么多年的付出换来是这个结果，就算不喜欢她了，我也享受有她在身边的滋味。两人的信任就是一张纸，捏成了一团再也回不到从前了。
+	往后的日子，可能会想骂她，偶尔也会很想她，但我会一点一点把她在我生命中留下的足迹，全都扫平。
+	再不甘心的也会过去的（说真的我都有点不相信爱情了），等我慢慢地养好伤，相信会那么一个人值得我去珍惜，珍惜我。
+	![TIM截图20180117164959](https://warrest.github.io/wArrest.github.io/assets/img/2018-2-23/8.jpeg)
 
 
 
-向日葵非常不稳定，而且必须下载向日葵客户端才能连接。而向日葵则是收费，而且价格越来越昂贵。
-
-后来，了解到了**ngrok**：ngrok 是一个[反向代理](https://baike.baidu.com/item/%E5%8F%8D%E5%90%91%E4%BB%A3%E7%90%86/7793488)，通过在公共的端点和本地运行的 Web 服务器之间建立一个安全的通道。ngrok 可捕获和分析所有通道上的流量，便于后期分析和重放（百度百科）
-
-ngrok可以做TCP端口转发，对于Linux可以将其映射到22端口进行SSH连接。Windows的远程桌面可以将其映射到3389端口来实现。同理，如果要做MySQL的远程连接，只需映射3306端口即可。
-
-#### 二、开始前
-
-1.一台VPS或者ECS（云服务器）可以是阿里云或者腾讯云，我这边示例用腾讯云，镜像配置为Centos7。
-
-2.一个泛解析到服务器的域名
-
-如图泛解析：![TIM截图20180117164959](https://warrest.github.io/wArrest.github.io/assets\img\ngrok\TIM截图20180117164959.png)
-
-#### 三、环境准备
-
-1.安装git
-
-`yum install git`
-
-2.配置go环境 
-
-下载go1.4.2
-
-```shell
-wget https://storage.googleapis.com/golang/go1.7.linux-amd64.tar.gz
-```
-
-可从后面的链接中下载新的版本：<https://golang.org/dl/>
-
-解压到/usr/local/
-
-```shell
-tar -C /usr/local/ -zxf go1.7.linux-amd64.tar.gz
-```
-
-添加环境变量
-
-```shell
-vim /etc/profile
-```
-
-进入编辑模式后 按i键 ，在最后添加两行代码
-
-```shell
-export GOROOT=/usr/local/go
-export PATH=$GOROOT/bin:$PATH
-```
-
-先按ESC，再按： 输入wq! 保存并退出，然后编译/etc/profile文件，使之前的配置生效
-
-```shell
-#编译profile
-source /etc/profile
-```
-
- 查看go环境是否配置成功
-
-```shell
-#查看go环境是否配置成功
-#显示go version go1.4.2 linux/amd64则说明go环境配成功
-#
-go version
-```
-
-显示go环境版本则配置成功！
-
-#### 四、准备编译Ngrok
-
- 1、下载Ngrok源码包
-
-```shell
-#下载ngrok源码包
-cd ~
-git clone https://github.com/inconshreveable/ngrok.git
-cd ngrok/
-```
-
-### 2、为Base域名生成自签名证书
-
-ngrok需要一个域名作为base域名，ngrok会为客户端分配base域名的子域名。例如：ngrok的base域名为tunnel.mydomain.com，客户端即可被分配子域名test.tunnel.mydomain.com。
-
-使用ngrok官方服务时，base域名是ngrok.com，并且使用默认的SSL证书。现在自建ngrok服务器，所以需要重新为自己的base域名生成证书。
-
-```shell
-#为base域名tunnel.mydomain.com生成证书
-openssl genrsa -out rootCA.key 2048
-openssl req -x509 -new -nodes -key rootCA.key -subj "/CN=superlies.xyz" -days 5000 -out rootCA.pem
-openssl genrsa -out device.key 2048
-openssl req -new -key device.key -subj "/CN=superlies.xyz" -out device.csr
-openssl x509 -req -in device.csr -CA rootCA.pem -CAkey rootCA.key -CAcreateserial -out device.crt -days 5000
-```
-
-**注意：一定要一行一行执行！**
-
-**一定要注意对应的base域名**
-
-执行完上述命令，正常情况下，该目录会多出device.crt、device.csr、device.key、rootCA.key、rootCA.pem、rootCA.srl六个文件，用它们来替换默认的证书文件即可。默认的证书文件在“./assets/client/tls”和“./assets/server/tls/”目录中
-
-```shell
-#替换默认的证书文件
-cp rootCA.pem assets/client/tls/ngrokroot.crt
-cp device.crt assets/server/tls/snakeoil.crt 
-cp device.key assets/server/tls/snakeoil.key
-```
-
-**注意：一定要一行一行执行！**
-
-#### 四、开始编译ngrok
-
-1、编译服务器端ngrokd
-
-ngrokd就是ngrok服务器端，默认编译为Linux的执行文件，我们的VPS本身就是Linux的，所以直接make编译就好。
-
-```shell
-#编译ngrokd（服务器端）
-make release-server
-```
-
-显示下面的内容则表示编译成功：
-
-```shell
-GOOS="" GOARCH="" go get github.com/jteeuwen/go-bindata/go-bindata
-bin/go-bindata -nomemcopy -pkg=assets -tags=release \
-	-debug=false \
-	-o=src/ngrok/client/assets/assets_release.go \
-	assets/client/...
-bin/go-bindata -nomemcopy -pkg=assets -tags=release \
-	-debug=false \
-	-o=src/ngrok/server/assets/assets_release.go \
-	assets/server/...
-go get -tags 'release' -d -v ngrok/...
-github.com/inconshreveable/mousetrap (download)
-github.com/rcrowley/go-metrics (download)
-Fetching https://gopkg.in/inconshreveable/go-update.v0?go-get=1
-Parsing meta tags from https://gopkg.in/inconshreveable/go-update.v0?go-get=1 (status code 200)
-get "gopkg.in/inconshreveable/go-update.v0": found meta tag main.metaImport{Prefix:"gopkg.in/inconshreveable/go-update.v0", VCS:"git", RepoRoot:"https://gopkg.in/inconshreveable/go-update.v0"} at https://gopkg.in/inconshreveable/go-update.v0?go-get=1
-gopkg.in/inconshreveable/go-update.v0 (download)
-github.com/kardianos/osext (download)
-github.com/kr/binarydist (download)
-Fetching https://gopkg.in/inconshreveable/go-update.v0/check?go-get=1
-Parsing meta tags from https://gopkg.in/inconshreveable/go-update.v0/check?go-get=1 (status code 200)
-get "gopkg.in/inconshreveable/go-update.v0/check": found meta tag main.metaImport{Prefix:"gopkg.in/inconshreveable/go-update.v0", VCS:"git", RepoRoot:"https://gopkg.in/inconshreveable/go-update.v0"} at https://gopkg.in/inconshreveable/go-update.v0/check?go-get=1
-get "gopkg.in/inconshreveable/go-update.v0/check": verifying non-authoritative meta tag
-Fetching https://gopkg.in/inconshreveable/go-update.v0?go-get=1
-Parsing meta tags from https://gopkg.in/inconshreveable/go-update.v0?go-get=1 (status code 200)
-Fetching https://gopkg.in/yaml.v1?go-get=1
-Parsing meta tags from https://gopkg.in/yaml.v1?go-get=1 (status code 200)
-get "gopkg.in/yaml.v1": found meta tag main.metaImport{Prefix:"gopkg.in/yaml.v1", VCS:"git", RepoRoot:"https://gopkg.in/yaml.v1"} at https://gopkg.in/yaml.v1?go-get=1
-gopkg.in/yaml.v1 (download)
-github.com/inconshreveable/go-vhost (download)
-github.com/alecthomas/log4go (download)
-github.com/nsf/termbox-go (download)
-github.com/mattn/go-runewidth (download)
-github.com/gorilla/websocket (download)
-go install -tags 'release' ngrok/main/ngrokd
-```
-
-我们可以在./bin/目录中找到文件ngrokd。可以先运行测试一下。
-
-```shell
-#执行ngrokd
-#
-./bin/ngrokd -domain="superlies.xyz" -httpAddr=":8080"
-```
-
-出现类似以下内容，则说明我们的服务器端ngrokd正常运行了。
-
-```shell
-[23:18:27 CST 2016/08/23] [INFO] (ngrok/log.(*PrefixLogger).Info:83) [registry] [tun] No affinity cache specified
-[23:18:27 CST 2016/08/23] [INFO] (ngrok/log.Info:112) Listening for public http connections on [::]:8080
-[23:18:27 CST 2016/08/23] [INFO] (ngrok/log.Info:112) Listening for public https connections on [::]:443
-[23:18:27 CST 2016/08/23] [INFO] (ngrok/log.Info:112) Listening for control and proxy connections on [::]:4443
-[23:18:27 CST 2016/08/23] [INFO] (ngrok/log.(*PrefixLogger).Info:83) [metrics] Reporting every 30 seconds
-```
-
-之后Ctrl+C退出ngrokd，继续来编译ngrok客户端。
-
-### 2、编译客户端ngrok
-
-编译linux客户端很简单，一条命令就搞定，编译的快慢和网速有关，一般来说五分钟左右就可以好
-
-```
-#编译Linux客户端
-make release-client
-```
-
-显示以下内容，没有任何报错的话，客户端ngrok就编译成功了，我们在./bin/目录下就可以找到执行文件ngrok。
-
-```shell
-bin/go-bindata -nomemcopy -pkg=assets -tags=release \
-	-debug=false \
-	-o=src/ngrok/client/assets/assets_release.go \
-	assets/client/...
-bin/go-bindata -nomemcopy -pkg=assets -tags=release \
-	-debug=false \
-	-o=src/ngrok/server/assets/assets_release.go \
-	assets/server/...
-go get -tags 'release' -d -v ngrok/...
-go install -tags 'release' ngrok/main/ngrok
-```
-
-是，我们现在需要在windows下运行ngrok客户端。所以，重点是我们需要编译Windows版的ngrok客户端。那么我们难道要安装WIndows版的go环境，在Windows下编译吗？那太麻烦了，不用这样。go开发环境为我们提供了强大的跨平台交叉编译功能，在Linux下即可完成Windows版的编译。
-
-```shell
-#执行如下命令编译Windows 64位客户端
-GOOS=windows GOARCH=amd64 make release-client
-```
-
-下载WinSCP软件（<a href="..\..\..\download\WinSCP.exe" download="WinSCP"></a>），将ngrok/bin目录下的整个windows_amd64文件夹拷贝下来放在D盘
-
-接着在ngrok目录下启动ngroked
-
-```shell
-./bin/ngrokd -tlsKey="assets/server/tls/snakeoil.key" -tlsCrt="assets/server/tls/snakeoil.crt" -domain="superlies"  -httpAddr=":80" -httpsAddr=":8082" -tunnelAddr=":8083"
-```
-
-在本机电脑D盘ngrok.exe所在目录下建立文件ngrok.cfg，用记事本等文本编辑器写入以下内容并保存。
-
-```shell
-server_addr: "superlies.xyz:8083"
-trust_host_root_certs: false
-tunnels:
-  http:
-    subdomain: "www"
-    proto:
-      http: "80"
-      
-  https:
-    subdomain: "www"
-    proto:
-      https: "8082"
- 
-  ssh:
-    remote_port: 2222
-    proto:
-      tcp: "22"
-
-  mstsc:
-        remote_port: 52222      
-        proto:
-         tcp: "192.168.1.6:3389"
-```
-
-然后接着在同个目录下新建一个ngrok.bat文件
-
-内容：
-
-```shell
-server_addr: "superlies.xyz:8083"
-trust_host_root_certs: false
-tunnels:
-  http:
-    subdomain: "www"
-    proto:
-      http: "80"
-      
-  https:
-    subdomain: "www"
-    proto:
-      https: "8082"
- 
-  ssh:
-    remote_port: 2222
-    proto:
-      tcp: "22"
-
-  mstsc:
-        remote_port: 52222      
-        proto:
-         tcp: "192.168.1.6:3389"
-```
-
-配合文件中加了mstsc端口：用于22端口远程连接
-
-#### 六、最后一步
-
-
-
-配置服务器的安全组规则（当初配置好之后，一直连接服务器超时，想了很久也想不出来为什么，之后还是在室友的帮助下，才发现原来服务器默认很多端口并没有开起来）![TIM截图20180117172703](https://warrest.github.io/wArrest.github.io/assets\img\ngrok\TIM截图20180117172703.png)
-
-好了万事OK
-
-点击ngrok.bat文件
-
-![TIM截图20180117172859](https://warrest.github.io/wArrest.github.io/assets\img\ngrok\TIM截图20180117172859.png)
-
-换一台电脑 WIN+R  输入mstsc 回车
-
-计算机输：superlies.xyz:52222
-
-连上之后输入你自己电脑的账户密码
-
-账户一般为Administrator
-
-服务器安全组配置导致穿透失败的问题，网上并没有找到答案，分享在这里，希望大家少走一点弯路。
