--- a/_posts/2018-2-23-关于你.md
+++ b/_posts/2018-2-23-关于你.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: '和你的这些年'
+title: '关于她'
 subtitle: '两个人分手后复合的概率是82%，但复合后能一直走到最后的只有3%，那97%再分手的理由其实都跟第一次一样。——《恋爱的温度》 这段话是真理。'
 date: 2018-2-23
 categories: 情感
@@ -13,7 +13,7 @@ tags: 2018-2-23 记住这一天
 	是的我很虚伪，真的把她拉到面前，一顿臭骂的狗血淋头，却还是说
 	![TIM截图20180117164959](https://warrest.github.io/wArrest.github.io/assets/img/2018-2-23/7.png)
 	我他么能怎么办，再臭骂，再生气，走掉的人还会回来吗?为什么老是控制不住自己失望？还不是因为每次都傻逼一样的高估自己在别人心里的地位？
-	本来还想把这些年的事，图文并茂地记录下来，一动键盘发现真的什么也不想说，关于那些好的坏的，什么也不想想，让人恶心，尽是虚伪。
+	本来还想把这些年的事，图文并茂地记录下来，让自己有个念想，可是一动键盘发现真的什么也不想说，关于那些好的坏的，什么也不想想，让人恶心，尽是虚伪。
 	从她劈腿之后，我其实就是原谅不了，我一直都释怀不了，就算在后来两个人和好的好像什么事也没发生一样。因为很不甘心，很不甘心自己这么多年的付出换来是这个结果，就算不喜欢她了，我也享受有她在身边的滋味。两人的信任就是一张纸，捏成了一团再也回不到从前了。
 	往后的日子，可能会想骂她，偶尔也会很想她，但我会一点一点把她在我生命中留下的足迹，全都扫平。
 	再不甘心的也会过去的（说真的我都有点不相信爱情了），等我慢慢地养好伤，相信会那么一个人值得我去珍惜，珍惜我。
