--- a/_posts/2018-2-23-关于她.md
+++ b/_posts/2018-2-23-关于她.md
@@ -8,8 +8,12 @@ cover: 'https://warrest.github.io/wArrest.github.io/assets/img/2018-2-23/IMG2017
 tags: 2018-2-23 记住这一天
 ---
 <iframe src="//music.163.com/outchain/player?type=2&amp;id=513791211&amp;auto=1&amp;height=66" frameborder="no" border="0" marginwidth="0" marginheight="0" width="330px" height="86px"> </iframe>
-​	从来没想过会第二次接受这种冷暴力，电话不接不回，微信不回，其他的事却啥都不耽搁。上一次是国庆，回学校的收她就说了分手。这次几乎是一模一样的节奏，说实话，我几乎是崩溃的。就在昨天晚上我和自己是说，要是明天她再继续下去，那我就说分手了。谁曾想知道，反倒是她先说了，果然还是一样的套路，我不知道为什么有些人，喜不喜欢一个人可以考虑4年，不知道为什么有些人可以分手前顺便冷暴力。这样很美滋滋吗？
-是的我很虚伪，真的想把她拉到面前，一顿臭骂的狗血淋头，却还是说
+​	从来没想过会第二次接受这种冷暴力，电话不接不回，微信不回，其他的事却啥都不耽搁。
+
+​	上一次是国庆，回学校的收她就说了分手。这次几乎是一模一样的节奏，说实话，我几乎是崩溃的。就在昨天晚上我和自己是说，要是明天她再继续下去，那我就说分手了。
+
+​	谁曾想知道，反倒是她先说了，果然还是一样的套路，我不知道为什么有些人，喜不喜欢一个人可以考虑4年，不知道为什么有些人可以分手前顺便冷暴力。这样很美滋滋吗？
+​	是的我很虚伪，真的想把她拉到面前，一顿臭骂的狗血淋头，却还是说
 ![TIM截图20180117164959](https://warrest.github.io/wArrest.github.io/assets/img/2018-2-23/7.png)
 ​	我他么能怎么办，再臭骂，再生气，走掉的人还会回来吗?为什么老是控制不住自己失望？还不是因为每次都傻逼一样的高估自己在别人心里的地位？
 
