--- a/_posts/2018-1-28-数据结构第一天.md
+++ b/_posts/2018-1-28-数据结构第一天.md
@@ -26,3 +26,37 @@ ADT 抽象数据类型{
 }
 
 ### 数据结构 + 算法 = 程序
+
+2018年3月4日15:15:29
+----
+### malloc函数动态分配内存
+首先了解malloc函数：其实就是**开辟内存**
+
+比如：
+```c
+int *p;//定义一个指针变量
+p = （int*）malloc(100*sizeof(int));
+//这里开辟出了100个int单元，400个字节，这里的p指向第一个元素
+```
+### 动态分配内存的好处
+#### 1.程序运行的过程中，根据用户的需求，动态地构造不同长度的数组
+#### 2.可以在程序运行的过程中释放它，节省内存
+示例：
+```c
+#include <stdio.h>
+#include <malloc.h>
+int main(void){
+	int a[5]={1,2,3,4,5};//静态数组，没有使用malloc函数的都属于静态数组
+	int len;
+	printf("请输入数组长度：len= ");
+	scanf("%d",len);
+	int * pArr = (int *)malloc(sizeof(int)*len);
+	//定义一个类型为整形的指针变量，动态分配内存 
+	*pArr = 4;//类似于a[0]=4 
+	pArr[1] = 10;//类似于a[1]=10 
+	printf("%d %d",*pArr,pArr[1]); 
+	free(pArr);//将动态分配的20个字节内存释放 
+	return 0; 
+	 
+}
+```
