--- a/_posts/2018-1-28-数据结构第一天.md
+++ b/_posts/2018-1-28-数据结构第一天.md
@@ -2,7 +2,7 @@
 layout: post
 title: '数据结构学习（不定期更新）'
 subtitle: '考虑了很久还是准备把数据结构从头到尾重新学一次。'
-date: 2018-3-4
+date: 2018-3-6
 categories: 数据结构
 cover: 'https://warrest.github.io/wArrest.github.io/assets/img/data/1338730837_2482.png'
 tags: 数据结构 学习
@@ -60,3 +60,115 @@ int main(void){
 	 
 }
 ```
+### 2018年3月6日19:33:40  跨函数使用内存例子
+```C++
+#include <stdio.h>
+#include <malloc.h>
+/*
+跨函数使用内存 
+*/
+struct Student{
+	int sid;
+	int age;
+};
+struct Student * CreateStudent(void);//声明一个类型为，，的指针变量 
+void ShowStudent(struct Student *);
+int main(void){
+	int i =0;
+	struct Student *pst;
+	pst=CreateStudent();
+	//printf("d%d%",pst->sid,pst->age);
+//	for(i=0;i<3;i++){
+		ShowStudent(pst);
+//		printf("%d",pst);
+//	}
+	
+	return 0;
+}
+struct Student * CreateStudent(void){
+	struct Student *temp = (struct Student *)malloc(sizeof(struct Student));
+	temp->sid=123;
+	temp->age=22;
+	return temp;
+	free(temp);
+}
+void ShowStudent(struct Student *pst){
+	printf("学号是%d,年龄是%d\n",pst->sid,pst->age);
+}
+```
+
+
+### 2018年3月6日18:16:03
+#### 线性结构：
+1.数组【顺序结构】
+实例：
+```C++
+#include <stdio.h>
+#include <malloc.h>//包含了malloc 
+#include <stdlib.h> //包含了exit 
+//定义了一个数据类型，该数据类型的名字为struct Arr，并没有定义变量 
+ struct Arr{
+ 	int * pBase;//存储的数组第一个元素的首地址 
+ 	int len;//数组容纳你元素的个数
+ 	int cnt;//当前数组有效元素的个数
+	//int increment;//自动增长因子 
+ };
+void init_arr(struct Arr *pArr,int len);//初始化 
+bool is_empty(struct Arr *pArr);
+void show_arr(struct Arr *pArr);
+/* 
+bool append_arr();//追加
+bool insert_arr();
+bool delete_arr();
+bool get();
+bool is_full();
+void sort_arr();
+void inversion_arr(); 
+
+*/
+
+int main(void){
+ 	struct Arr arr;
+	init_arr(&arr,6);//传递arr的地址，初始化后指向一个数组，初始化前三个成员都是垃圾数字  
+ 	//printf("%d",arr.len);
+ 	show_arr(&arr);
+	 return 0;
+}
+void init_arr(struct Arr *pArr,int len){
+	
+ 	pArr->pBase = (int *)malloc(len*sizeof(int));	
+ 	//如果分配失败 
+ 	if(NULL == pArr->pBase){
+	 	printf("动态内存分配失败！");
+		exit(-1);//终止程序 ,需要stdlib.h头文件 
+	 }
+	 else{
+ 		pArr->len = len;
+ 		pArr->cnt = 0;
+ 	} 
+ 	return;
+}
+  
+bool is_empty(struct Arr *pArr){
+ 	if(0 == pArr->cnt){
+	 	return true;
+	 }
+ 	else{
+	 	return false;
+	 }
+}
+ 
+void show_arr(struct Arr *pArr){
+	if(is_empty	(pArr)){
+	 	printf("该数组为空！\n");
+	 }
+ 	else{
+ 		for(int i=0;i<pArr->cnt;i++){
+		 	printf("%d",pArr->pBase[i]);
+		 	//int * 
+		 }	
+ 	}
+}
+
+```
+4.2.链表【】3.栈【】4.树
